# melwallet-client

./: .gitignore  Cargo.toml  README.md  haha.json  lala.json  testnet-lala.json
src/: autoswap.rs  cli.rs  client.rs  errors.rs  lib.rs  main.rs  persistent_truststore.rs  state.rs  structs.rs
src/autoswap/: mod.rs
src/cli/: mod.rs
