[package]
name = "melwallet-client"
version = "0.7.0"
authors = ["Themelio Labs"]
edition = "2018"

description = "melwalletd client library"
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/melwallet-client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tmelcrypt = { git = "https://github.com/themeliolabs/themelio-core" }
tmelcrypt= "0.2.4"
smolscale= "0.3.23"
stdcode= "0.1.7"
themelio-stf= "0.9.15"
serde={ version = "1.0.136", features = ["derive"] }
anyhow= "1.0.56"
tracing-subscriber = "0.3.9"
log= "0.4.16"
tracing= "0.1.32"
smol= "1.2.5"
serde_json= { version = "1.0.79", features = ["arbitrary_precision"] }
async-h1= "2.3.3"
dirs= "4.0.0"
http-types= "2.12.0"
smol-timeout= "0.6.0"
serde_with= "1.12.0"
colored= "2.0.0"
tabwriter={ version = "1.2.1", features = ["ansi_formatting"] }
hex= "0.4.3"
once_cell = "1.10.0"
getrandom = "0.2.5"
format_num= "0.1.0"
thiserror= "1.0.30"
themelio-structs = "0.2.6"
rpassword = "7.0.0"
clap = { version = "3.2.16", features = ["derive", "cargo"] }
clap_complete = "3.2.3"
terminal_size = "0.2.1"
