[package]
name = "melwallet-cli"
version = "0.7.3"

edition = "2021"

description = "melwallet-cli library"
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/melwallet-client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# # these fields were added to clean up the output while writing tests
# # https://doc.rust-lang.org/cargo/reference/cargo-targets.htm

# [[tests]]
# test = true

# [[doc]]
# test = false

# [patch.crates-io]
# themelio-nodeprot={path="../themelio-nodeprot"}
# melwalletd-prot={path="../melwalletd-prot"}


[dependencies]
# tmelcrypt = { git = "https://github.com/themeliolabs/themelio-core" }
tmelcrypt= "0.2.4"
smolscale= "0.3.23"
stdcode= "0.1.7"

serde={ version = "1.0.136", features = ["derive"] }
anyhow= "1.0.56"
tracing-subscriber = "0.3.9"
log= "0.4.16"
tracing= "0.1.32"
smol= "1.2.5"
serde_json= { version = "1.0.79", features = ["arbitrary_precision"] }
colored= "2.0.0"
tabwriter={ version = "1.2.1", features = ["ansi_formatting"] }
hex= "0.4.3"
once_cell = "1.10.0"
getrandom = "0.2.5"
thiserror= "1.0.30"

rpassword = "7.0.0"
clap = { version = "4.1.2", features = ["derive", "cargo"] }
clap_complete = "4.1.1" 
terminal_size = "0.2.1"

melvm = "0.1.0"
melstructs = "0.3.2"
melwallet = {git = "https://github.com/mel-project/melwallet", branch = "master"}
# melwallet = {path = "../melwallet"}
acidjson = "0.1.2"
melprot = "0.13.4"
bytes = "1.4.0"
base32 = "0.4.0"
fastrand = "1.9.0"
ed25519-dalek = "1.0.1"
futures-util = "0.3.28"

[dev-dependencies]
assert_cmd = "2.0.7"
